store db in volume. common network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,21 @@ services:
       - .:/var/www/app
     ports:
       - 8000:8000
+    networks:
+      - default
+      - common
   db:
     image: mariadb
     environment:
       MARIADB_ROOT_PASSWORD: example
     volumes:
       - ./docker/mariadb/initdb:/docker-entrypoint-initdb.d
+      - dom-db:/var/lib/mysql
     ports:
       - 3307:3306
+networks:
+  common:
+    external: true
+    name: common-network
+volumes:
+  dom-db:
